# Cpp-snippets

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  main.cpp
algorithms/computational_geometry/: closestPoints.cpp  test.txt
data_structures/linkedlist.cpp/: closestPoints.cpp  linkedList.hpp  out
src/: main.cpp
src/algorithms/computational_geometry/: closestPoints.cpp
src/geometric_classes/: Point2D.cpp  Point2D.hpp
tests/: Point2D-test.cpp
